--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,20 @@ h3 {
   color: white;
   padding: 50px 10px;
 }
+
+.card {
+  border: solid 2px white;
+  margin: 15px;
+  display: inline-grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  gap: 15px 10px;
+}
+
+.charName {
+  color: white;
+}
+
+.profilePic {
+  border-radius: 50%;
+}
