--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 * {
   margin: 0px;
   padding: 5px;
+  background-color: rgb(1, 86, 81);
 }
 
 main {
-  background-color: rgb(1, 86, 81);
+  width: 80%;
+  margin: auto !important;
 }
 
 .logo {
@@ -21,6 +23,7 @@ h1 {
 
 input {
   border-radius: 20px;
+  border: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,8 +34,14 @@ input {
 
 .container {
   display: flex;
-  align-items: left;
-  justify-content: left;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 columns */
+  gap: 60px; /* Adjust the gap as needed */
 }
 
 h3 {
@@ -41,12 +50,17 @@ h3 {
 }
 
 .card {
-  border: solid 2px white;
-  margin: 15px;
-  display: inline-grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  gap: 15px 10px;
+  border: solid 2px lightgreen;
+  background-color: cadetblue !important;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-content {
+  text-align: center;
+  padding: 10px;
 }
 
 .charName {
@@ -55,4 +69,6 @@ h3 {
 
 .profilePic {
   border-radius: 50%;
+  margin-left: 0px;
+  margin-top: -50px;
 }
