--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@ main {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: "column";
 }
 
 h1 {
