--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,3 +87,22 @@ h3 {
 .green-dot {
   font-size: 10px;
 }
+
+@media (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 992px) {
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 767px) {
+  /* Apply these styles for screens with a maximum width of 767px (phones) */
+  .grid {
+    grid-template-columns: repeat(1, 1fr); /* Display one column for phones */
+  }
+}
