--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,11 @@ h3 {
   border-radius: 50%;
   margin-left: 0px;
   margin-top: -50px;
+  padding: 0px !important;
+}
+
+.profilePic:hover {
+  border: solid 4px rgb(169, 243, 60);
 }
 
 .green-dot {
